package co.za.millenniumsolutions.model;

public record Evidence(String id, String workEntryId, String status) {}
